Assigned To Field, Fix Modal Layout, New Column Spacing Completed
Assigned To Field- added assigned to field
Fix Modal Layout with adding close buttons
New Column Spacing with assigned to field

--- a/client/src/css/layout.scss
+++ b/client/src/css/layout.scss
@@ -191,3 +191,7 @@ html {
     padding-right: 0px !important;
     //font-size: 1.125rem;
 }
+
+.close-button {
+    align-items: center;
+}
